feat: add separate configuration files for i3, Kitty, and Picom

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,19 @@
-# Tamaño de fuente
-font_size 12.0
-
 # Color de fondo
-background_opacity 0.9
+background_opacity 0.7
+
+background #ff0000
 
 # Desplazamiento
 scrollback_lines 10000
+
+# Configurar la fuente principal
+font_family FiraCode Nerd Font
+
+# Tamaño de la fuente
+font_size 14.0
+
+# Configuraciones adicionales opcionales
+bold_font FiraCode Nerd Font Bold
+italic_font FiraCode Nerd Font Italic
+bold_italic_font FiraCode Nerd Font Bold Italic
 
