--- a/i3/config
+++ b/i3/config
@@ -33,6 +33,13 @@ exec --no-startup-id pipewire-pulse
 # Atajo para abrir `pavucontrol`
 bindsym $mod+p exec --no-startup-id pavucontrol
 
+# Font for window titles and i3bar
+font pango:FiraCode Nerd Font 10
+
+# Añadir picom al inicio automático de i3
+exec --no-startup-id picom
+
+#####END CUSTOM CONFIG########
 
 
 
