feat: add fzf for theme selection, lsd installation and aliases

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,21 @@
-# Color de fondo
-background_opacity 0.7
-
-background #ff0000
-
-# Desplazamiento
-scrollback_lines 10000
+# Tamaño de la fuente
+font_size 14.0
 
 # Configurar la fuente principal
 font_family FiraCode Nerd Font
-
-# Tamaño de la fuente
-font_size 14.0
 
 # Configuraciones adicionales opcionales
 bold_font FiraCode Nerd Font Bold
 italic_font FiraCode Nerd Font Italic
 bold_italic_font FiraCode Nerd Font Bold Italic
+
+# Desplazamiento
+scrollback_lines 10000
+
+# Color de fondo y opacidad
+background_opacity 0.5
+background #1e1e1e
+
+# Incluir tema
+include ~/kitty-themes/themes/Wryan.conf
 
